chore: add babel preset and update title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HotPink</title>
+    <title>hotpink</title>
     <meta charset="UTF-8" />
     <link rel="preload" href="stylesheets/styles.css" as="style" />
     <link href="stylesheets/styles.css" rel="stylesheet" />
