--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>hotpink</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href="stylesheets/styles.css" as="style" />
     <link href="stylesheets/styles.css" rel="stylesheet" />
   </head>
