:sparkles: fix overscrolling

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
     <link href="stylesheets/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="curtain"></div>
-    <div id="container">
-      <h1 id="title">Hey 👋</h1>
+    <div id="frame">
+      <div id="curtain"></div>
+      <div id="container">
+        <h1 id="title">Hey 👋</h1>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
