--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div id="frame">
-      <div id="curtain"></div>
+      <div id="curtain">
+        <svg viewBox="0 0 500 200">
+          <path id="ecg" d="M486.6 113.8H328.2l-17.9 18.5L296 70.7l-49.2 56.7-5.2-7.2-7.7 46.2L227 27.6l-13.8 90.7-1.4-6-6.7 13.8-6.9-17.6-4.1 15.9-9.6-31.5-10.4 20.1H4.3"/>
+        </svg>
+      </div>
       <div id="container">
         <h1 id="title">Hey 👋</h1>
       </div>
